# chatgpt_telegram_bot

./: .dockerignore  Dockerfile  pyproject.toml
bot/: bot.py  config.py  openai_utils.py
config/: chat_modes.yml  config.example.yml  models.yml
