[tool.poetry]
name = "chatgpt-telegram-bot"
version = "0.2.0"
description = ""
authors = ["Luginbash Hiyajo <725033+luginbash@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {version = "20.1", extras = ["rate-limiter"]}
openai = "^1.2.2"
tiktoken = "^0.5.1"
pyyaml = "^6.0.1"
pymongo = "^4.6.0"
python-dotenv = "^1.0.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
